--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serenity = "0.10" 
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+tracing = "0.1"
+tracing-subscriber = "0.2"
+tracing-futures = "0.2"
+
+[dependencies.songbird]
+version = "0.2.0"
+features = ["youtube-dlc"]
+
+[dependencies.serenity]
+version = "0.10"
+features = ["client", "standard_framework", "voice", "rustls_backend"]
+
+[dependencies.tokio]
+version = "1.0"
+features = ["macros", "rt-multi-thread", "signal"]
